--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "framer-motion": "^7.3.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.9",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.7.15",
